--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 NEXT_PUBLIC_PROJECT_NAME="Test seven hunter"
-NEXT_PUBLIC_SERVICE=https://randomuser.me
+NEXT_PUBLIC_SERVICE=https://dummyjson.com
 NEXT_PUBLIC_TOKEN=TOKEN
 NEXT_PUBLIC_ACCEPT=application/json
 
