create assignment file

--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ NEXT_PUBLIC_ACCEPT=application/json
 
 NEXT_PUBLIC_LIGHTBOX_PLAN_TYPE="individual"
 NEXT_PUBLIC_LIGHTBOX_LICENSE_KEY="4CE0-406C-E8EC-5F69"
+
+NEXT_PUBLIC_POKEMON_GRAPHQL_API="https://graphql-pokemon2.vercel.app/"
