--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "generate": "yarn preprocess-generated && swagger-typescript-api -p ./src/api/generated/configs/swagger-processed.json -o ./src/api/generated/main-service -n apiGenerated.ts --axios --unwrap-response-data && yarn postprocess-generated"
   },
   "dependencies": {
+    "@apollo/client": "^3.13.1",
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/modifiers": "^7.0.0",
     "@dnd-kit/sortable": "^8.0.0",
@@ -32,6 +33,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "framer-motion": "^12.4.3",
+    "graphql": "^16.10.0",
     "i18next": "^23.15.1",
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-http-backend": "^2.6.1",
