create search pokemon graphql

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,6 +18,8 @@
     "lucide",
     "nextui",
     "nprogress",
+    "pokeball",
+    "pokemons",
     "reduxjs",
     "swiper",
     "tailwindcss",
