--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_PROJECT_NAME="Test seven hunter"
+NEXT_PUBLIC_PROJECT_NAME="Assignment"
 NEXT_PUBLIC_SERVICE=https://dummyjson.com
 NEXT_PUBLIC_TOKEN=TOKEN
 NEXT_PUBLIC_ACCEPT=application/json
